--- a/todo.css
+++ b/todo.css
@@ -1,122 +1,149 @@
-body{
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-/* Styling paragraph elements */
-p{
-  color: gray;
-  display: inline;
-}
-p:hover{
-  cursor:pointer;
-}
-/* Styling placeholder */
-::placeholder{
-  font-size: large;
-}
-/* Styling header, footer and main sections */
-header,footer{
-  margin: 2%;
-  display: flex;
-  justify-content: space-between;
-}
-header , main{
-  margin: 2%;
-  border-bottom: 0.5px solid gray;
-}
-#container{
-  background-color: aliceblue;
-  margin: auto;
-  margin-top: 3%;
-  width: 500px;
-  height: auto;
-  border: 1px solid black;
-  border-radius: 1rem;
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+
+:root {
+  --container-height: 600px;
+  --contaier-width: 400px;
+  --header-height: 150px;
 }
 
-/*styling header and internal fields of header*/
-header{
-  display: flex;
-  flex-direction: column;
-  height: 15%;
-}
-#add-task{
-  display:flex;
-  position:relative;
-  height: 80%;
-  justify-content: space-between;
-}
-#header-bottom{
-  display: flex;
-  justify-content: space-between;
-  font-size: smaller;
-}
-#input-task{
-  width: 100%;
-  height: 90%;
-  border:none;
-  border-radius: 0.5rem;
-}
-.add-btn{
-  display: none;
-  font-size: medium;
-  position: absolute;
-  top: 2%;
-  right: 2%;
-  background-color:white;
-  border: none;
-  border-radius: 0.5rem;
-  height: 80%;
-}
-
-.add-button-active{
-  display: block;
-  font-size: medium;
-  position: absolute;
-  top: 2%;
-  right: 2%;
-  background-color:white;
-  border: none;
-  border-radius: 0.5rem;
-  height: 80%;
-}
-
-/* Styling footer section */
-footer{
-  word-spacing: 3px;
-  font-size: smaller;
-}
-/* Styling list elements of main section */
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-ul li {
-  padding: 10px;
-  padding-left: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: inherit;
-  align-items: center;
-  overflow:hidden;
-}
-#task-list input:checked + label {
-  text-decoration: line-through;
-}
-.highlight:active{
-  color: black;
-}
-
-.delete{
-  display: none;
-}
-
-li:hover .delete{
-  display: block;
-}
-/* chrome css */
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
+  font-family: 'Ubuntu', monospace;
+}
+html {
+  font-size: 20px;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
+  background-color: antiquewhite;
+  width: var(--contaier-width);
+  height: var(--container-height);
+
+  position: relative;
+  overflow: hidden;
+}
+header {
+  width: 100%;
+  height: var(--header-height);
+  background-image: url('./img/bg.jpg');
+  background-size: cover;
+  border-radius: 5px 5px 0 0;
+}
+.header {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+}
+.new-todo {
+  width: 100%;
+  height: 50px;
+  padding: 0.25rem 0;
+}
+.new-todo form {
+  display: flex;
+  align-items: center;
+}
+.new-todo form input {
+  flex: 1;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  border-right: 0px;
+  outline: transparent;
+  padding-left: 0.5rem;
+  font-size: 1rem;
+  color: #fff;
+}
+.new-todo form button {
+  width: 60px;
+  height: 40px;
+  font-size: 1rem;
+  background-color: transparent;
+  color: rgb(255, 247, 0);
+  border: none;
+  border-left: 0px;
+  cursor: pointer;
+}
+.new-todo form button:hover {
+  text-shadow: 1px 1px 20px rgba(0, 0, 0, 0.8);
+}
+
+#todos-list {
+  height: calc(var(--container-height) - var(--header-height));
+  background-color: #fff;
+  padding: 0.5rem;
+  border: 1px solid rgb(219, 219, 219);
+  overflow: scroll;
+  border-radius: 0 0 5px 5px;
+}
+
+#todos-list .todo {
+  display: flex;
+  align-items: center;
+  padding: 0.75rem 0.5rem;
+  border-radius: 5px;
+}
+#todos-list .todo:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+#todos-list .todo * {
+  cursor: pointer;
+  margin-right: 0.5rem;
+}
+#todos-list .todo i {
+  font-size: 0.9rem;
+}
+#todos-list .todo p {
+  flex: 1;
+  word-break: break-all;
+}
+.checked {
+  text-decoration: line-through;
+  color: grey;
+}
+#todos-list .todo .bi-pencil-square {
+  color: rgb(31, 177, 48);
+}
+#todos-list .todo .bi-trash {
+  color: rgb(236, 82, 82);
+  margin: 0;
+}
+
+.notification {
+  position: absolute;
+
+  width: calc(3 * var(--contaier-width) / 4);
+  height: 60px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  opacity: 0.9;
+
+  border-radius: 8px;
+  background-color: rgb(233, 81, 81);
+  top: 10px;
+  right: calc(-3 * var(--contaier-width) / 4);
+
+  color: #fff;
+
+  transition: 300ms right ease-in-out;
+}
+
+.notif-enter {
+  right: 10px;
 }
